Closed Bug 911914 Opened 12 years ago Closed 12 years ago

Cannot build BionicGlue.cpp with --enable-android-libstdcxx

Categories

(Core :: mozglue, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla26

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(1 file)

When using gcc 4.8 with --enable-android-libstdcxx, the following error occurs. /home/makoto/Development/hg.mozilla.org/mobile/mozglue/build/BionicGlue.cpp: In function 'pid_t __wrap_fork()': /home/makoto/Development/hg.mozilla.org/mobile/mozglue/build/BionicGlue.cpp:113:63: error: conversion from 'std::vector<AtForkFuncs, SpecialAllocator<AtForkFuncs> >::iterator {aka __gnu_cxx::__normal_iterator<AtForkFuncs*, std::vector<AtForkFuncs, SpecialAllocator<AtForkFuncs> > >}' to non-scalar type 'std::vector<AtForkFuncs>::iterator {aka __gnu_cxx::__normal_iterator<AtForkFuncs*, std::vector<AtForkFuncs> >}' requested for (std::vector<AtForkFuncs>::iterator it = atfork.begin(); ^ /home/makoto/Development/hg.mozilla.org/mobile/mozglue/build/BionicGlue.cpp:114:13: error: no match for 'operator<' (operand types are 'std::vector<AtForkFuncs>::iterator {aka __gnu_cxx::__normal_iterator<AtForkFuncs*, std::vector<AtForkFuncs> >}' and 'std::vector<AtForkFuncs, SpecialAllocator<AtForkFuncs> >::iterator {aka __gnu_cxx::__normal_iterator<AtForkFuncs*, std::vector<AtForkFuncs, SpecialAllocator<AtForkFuncs> > >}') it < atfork.end(); ++it)
Attached patch fixSplinter Review
Attachment #798724 - Flags: review?(mh+mozilla)
Attachment #798724 - Flags: review?(mh+mozilla) → review+
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: