Bug 911914 - Cannot build BionicGlue.cpp with --enable-android-libstdcxx. r=glandium